--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   ],
   "scripts": {
     "dev": "webpack --config build/webpack.dev.conf.js",
-    "build": "webpack --config build/webpack.prod.conf.js"
+    "build": "webpack --config build/webpack.prod.conf.js",
+    "start": "webpack --config build/webpack.demo.conf.js",
+    "generate": "webpack --config build/webpack.generate.conf.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "url": "https://github.com/sakitam-fdd/vue-schedule/issues"
   },
   "dependencies": {
+    "vue": "^2.5.16"
   },
   "peerDependencies": {
     "vue": "^2.5.16"
@@ -44,6 +47,7 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.0",
     "eslint-config-standard": "^11.0.0",
@@ -54,13 +58,14 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.3.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^3.0.7",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "postcss-loader": "^2.1.3",
     "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.3",
     "postcss-url": "^7.3.1",
     "sass-loader": "^6.0.7",
     "uglifyjs-webpack-plugin": "^1.2.4",
@@ -68,7 +73,8 @@
     "vue-loader": "^14.2.1",
     "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.1.1",
+    "portfinder": "^1.0.13",
+    "webpack": "^4.2.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1",
