--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "scripts": {
     "dev": "webpack --config build/webpack.dev.conf.js",
     "build": "webpack --config build/webpack.prod.conf.js",
-    "start": "webpack --config build/webpack.demo.conf.js",
-    "generate": "webpack --config build/webpack.generate.conf.js"
+    "start": "webpack-dev-server --inline --config build/webpack.demo.conf.js",
+    "generate": "webpack --config build/webpack.generate.conf.js",
+    "gh": "npm run generate && node build/deploy"
   },
   "repository": {
     "type": "git",
@@ -61,19 +62,21 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.0.7",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "portfinder": "^1.0.13",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.3",
     "postcss-url": "^7.3.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.2.1",
     "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.5.16",
-    "portfinder": "^1.0.13",
     "webpack": "^4.2.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.12",
